[package]
name = "shapes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = { version = "0.22.0",  features = [
    "__screenshot", # __screenshot is so we can dump a screenshot using EFRAME_SCREENSHOT_TO
    "wgpu",
]}
env_logger = "0.10"
rand = "0.8"
image = { version = "0.24.7", default-features = false, features = ["png"] }
rfd = "0.11"